--- a/Frontend Part/pages/src/index.html
+++ b/Frontend Part/pages/src/index.html
@@ -7,7 +7,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <title>Weight Scale</title>
-
+    <!--row code css file-->
+    <script src="https://kit.fontawesome.com/ba78558982.js" crossorigin="anonymous"></script>
     <!--index css -->
     <link rel="stylesheet" href="/pages//css/index.css">
   </head>
@@ -61,8 +62,39 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </button>
-      </div>
+    </div>
     <!--slider end here-->
+
+    <!--why Weight Scale start-->
+    <section class="why-bg" >
+            <h2 class="text-center text-uppercase h-color"><br> Why Weight Scale</h2>
+        <div class="row justify-content-center my-5">
+            <div class="col-md-7 my-5">
+                <div class="row why-content">
+                    <div class="col-md-4 text-center">
+                        <div class="container text-light">
+                            <img height="80px"  src="/public/icon/hours.png" alt="">
+                            <p class="h4 my-4">24 / 7 Service</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <div class="container text-light">
+                            <img height="80px" src="/public/icon/progress.png" alt="">
+                            <p class="h4 my-4">Work Progress</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-center">
+                        <div class="container text-light">
+                            <img height="80px" src="/public/icon/trac.png" alt="">
+                            <p class="h4 my-4">Work Track</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--why Weight Scale end-->
 
     <!--footer start-->
     <section class="container">
