--- a/Frontend Part/pages/src/index.html
+++ b/Frontend Part/pages/src/index.html
@@ -16,7 +16,9 @@
     <!-- navbar start here -->
     <section class="navbar-color">
         <nav class="navbar navbar-expand-lg navbar-light container">
-            <a class="navbar-brand text-light" href="#">Weight Scale</a>
+            <a class="navbar-brand text-light" href="#">
+                <img height="40px" src="/public/icon/truck.gif" alt="">
+                Weight Scale</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -31,6 +33,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-light" href="#">Blogs</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="#">Contact</a>
@@ -93,8 +98,31 @@
             </div>
         </div>
     </section>
-
     <!--why Weight Scale end-->
+
+    <!--services start -->
+    <section class="" >
+      <h2 class="text-center text-uppercase text-dark"><br> Our Services</h2>
+      <div class="row justify-content-center my-5">
+        <div class="col-md-7 my-5">
+            <div class="row why-content">
+                <div class="col-md-4 text-center">
+                    <div class="container ">
+                        <img height="80px"  src="/public//icon/icons8-weight-scale-64.png" alt="">
+                        <p class="h5 text-dark">Weight Scale Can any product measurement</p>
+                    </div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <div class="container ">
+                        <img height="80px" src="/public/icon/icons8-truck-48.png" alt="">
+                        <p class="h5 text-dark">User Can hire Driver</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
+    </section>
+    <!--service end here-->
 
     <!--footer start-->
     <section class="container">
