frontend blog section done

--- a/Frontend Part/pages/src/index.html
+++ b/Frontend Part/pages/src/index.html
@@ -124,6 +124,32 @@
     </section>
     <!--service end here-->
 
+    <!--bloog section start-->
+    <section class="container" >
+      <h2 class="text-center text-uppercase text-dark"><br> Our Blogs</h2><hr>
+            <div class="row why-content">
+                <div class="col-md-4 col-lg-4 col-sm-12 text-center">
+                    <div class="container ">
+                        <img height="164px"  src="/public/blog/b1.jpg" alt="">
+                        <p class="h5 text-dark my-3">Need any help or have any queries about local moving services in Christchurch</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-lg-4 col-sm-12 text-center">
+                    <div class="container ">
+                        <img height="164px" src="/public/blog/b2.jpg" alt="">
+                        <p class="h5 text-dark my-3">Camry Digital Weight Machine/ Weight scale (AS PER GIVEN MODELS) .</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-lg-4 col-sm-12 text-center">
+                    <div class="container ">
+                        <img height="164px" src="/public/blog/b3.jpg" alt="">
+                        <p class="h5 text-dark my-3">A work-in-progress (WIP) is a partially finished good awaiting</p>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <!--end blog section-->
+
     <!--footer start-->
     <section class="container">
 
