--- a/Frontend Part/pages/src/index.html
+++ b/Frontend Part/pages/src/index.html
@@ -26,19 +26,19 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                  <a class="nav-link text-light" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link text-light" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-light" href="#">Service</a>
+                  <a class="nav-link text-light" href="service">Service</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="#">About</a>
+                    <a class="nav-link text-light" href="about">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-light" href="#">Blogs</a>
+                  <a class="nav-link text-light" href="blogs">Blogs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="#">Contact</a>
+                    <a class="nav-link text-light" href="contact">Contact</a>
                 </li>
               </ul>
             </div>
@@ -151,8 +151,32 @@
     <!--end blog section-->
 
     <!--footer start-->
-    <section class="container">
-
+    <section class="footer-color">
+        <div class="row ml-2 mr-2">
+            <div class="col-sm-4 col-lg-4 col-sm-12">
+                <div class="text-center my-5">
+                    <img height="120px" src="/public/icon/truck.gif" alt="">
+                    <p class="text-light">Weight Scale</p>
+                </div>
+            </div>
+            <div class="col-sm-4 col-lg-4 col-sm-12">
+                <div class="my-3 text-center">
+                    <h3 class="text-light">Quick Links</h3>
+                    <ul class="quick">
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Service</a></li>
+                        <li><a href="">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-sm-4 col-lg-4 col-sm-12">
+                <div class="text-center">
+                    <h2 class="my-3 text-light">About-Us</h2>
+                    <p class="text-light lead">Weight Scale Project abouts</p>
+                </div>
+            </div>
+        </div>
     </section>
     <!--footer end-->
 
