--- a/Frontend Part/pages/src/index.html
+++ b/Frontend Part/pages/src/index.html
@@ -29,16 +29,16 @@
                   <a class="nav-link text-light" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-light" href="service">Service</a>
+                  <a class="nav-link text-light" href="service.html">Service</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="about">About</a>
+                    <a class="nav-link text-light" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link text-light" href="blogs">Blogs</a>
+                  <a class="nav-link text-light" href="blogs.html">Blogs</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="contact">Contact</a>
+                    <a class="nav-link text-light" href="contact.html">Contact</a>
                 </li>
               </ul>
             </div>
