blog details page done frontend

--- a/Frontend Part/pages/src/about.html
+++ b/Frontend Part/pages/src/about.html
@@ -45,6 +45,12 @@
     </nav>
 </section>
 <!--navbar end here-->
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb container">
+      <li class="breadcrumb-item "><a class="text-dark" href="#">Home</a></li>
+      <li class="breadcrumb-item active" aria-current="page">About</li>
+    </ol>
+  </nav>
 
       <!--about us start here-->
         <div class="row justify-content-center ">
