--- a/Frontend Part/pages/src/blogs.html
+++ b/Frontend Part/pages/src/blogs.html
@@ -46,6 +46,13 @@
 </section>
 <!--navbar end here-->
 
+<nav aria-label="breadcrumb">
+    <ol class="breadcrumb container">
+      <li class="breadcrumb-item "><a class="text-dark" href="#">Home</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Blog Lists</li>
+    </ol>
+  </nav>
+
  <!--blog section start-->
     <section class="container">
           <!--bloog section start-->
