--- a/Frontend Part/pages/src/singleBlog.html
+++ b/Frontend Part/pages/src/singleBlog.html
@@ -49,58 +49,72 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb container">
       <li class="breadcrumb-item "><a class="text-dark" href="#">Home</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Services</li>
+      <li class="breadcrumb-item active" aria-current="page">Blog Page Details</li>
     </ol>
   </nav>
 
-        <!--services start -->
-    <section class="" >
-        <h2 class="text-center text-uppercase text-dark"><br> Our Services</h2>
-        <div class="row justify-content-center my-5">
-          <div class="col-md-7 my-5">
-              <div class="row why-content">
-                  <div class="col-md-4 text-center">
-                      <div class="container ">
-                          <img height="80px"  src="/public//icon/icons8-weight-scale-64.png" alt="">
-                          <p class="h5 text-dark">Weight Scale Can any product measurement</p>
-                      </div>
-                  </div>
-                  <div class="col-md-4 text-center">
-                      <div class="container ">
-                          <img height="80px" src="/public/icon/icons8-truck-48.png" alt="">
-                          <p class="h5 text-dark">User Can hire Driver</p>
-                      </div>
-                  </div>
-              </div>
-          </div>
-        </div>
-      </section>
-      <!--service end here-->
-
-      <!--about us start here-->
-        <div class="row justify-content-center ">
-
-            <div class="col-md-10">
-                <h2 class="text-center my-5">About Us</h2>
-                <div class="row">
-                    <div class="col-md-4 col-lg-4 col-sm-12 my-3 text-center">
-                        <img height="150px" src="/public//icon//truck.gif" alt="">
-                    </div>
-                    <div class="col-md-8 col-lg-8 col-sm-12">
-                        <p class="lead">
-                             This Project Name is Weight Scale, There are three role name is Admin, User, Sellers, Driver, User can hire Driver User can request driver then when driver
-                            accept the request then user can seller information send him , then when driver get the product and update this website user can see the details infomation, and seller
-                            can see the details how many product get him and details information and admin can each and everything controll the website
-
-                            [Nb : user find truck and send him details information seller then select select_seller productDetails information input then user can see the details information when truck
-                            delevery complete then status change ]
-
+    <section class="container">
+        <div class="row my-5">
+            <div class="col-sm-12 col-md-8 col-lg-8">
+                <div class="card my-2">
+                    <div class="card-body">
+                        <img width="100%" height="400px" src="/public/blog/b1.jpg" alt="">
+                        <div>
+                            <h3 class="my-3">Blog Title</h3> <hr>
+                            <p>
+                                a wheeled vehicle for moving heavy articles: such as. a : a strong horse-drawn or automotive vehicle (such as a pickup) for hauling. b : an automotive vehicle with a short chassis equipped with a swivel for attaching a trailer and used especially for the highway hauling of freight also : a truck with attached ..
                             </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-12 col-md-4 col-lg-4">
+                <div class="card my-2">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-4 col-lg-4 col-sm-6">
+                                <img height="68px" width="100%" src="/public/blog/b1.jpg" alt="">
+                            </div>
+                            <div class=" text-light col-md-8 col-lg-8 col-sm-6">
+                                <a class="text-dark" href="">Blog Title</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+                <div class="card my-2">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-4 col-lg-4 col-sm-6">
+                                <img height="68px" width="100%" src="/public/blog/b1.jpg" alt="">
+                            </div>
+                            <div class=" text-light col-md-8 col-lg-8 col-sm-6">
+                                <a class="text-dark" href="">Blog Title</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="card my-2">
+                    <div class="card-body">
+                        <div class="row">
+                            <div class="col-md-4 col-lg-4 col-sm-6">
+                                <img height="68px" width="100%" src="/public/blog/b1.jpg" alt="">
+                            </div>
+                            <div class=" text-light col-md-8 col-lg-8 col-sm-6">
+                                <a class="text-dark" href="">Blog Title</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-      <!--about us end here-->
+    </section>
+
+
 <!--footer start-->
 <section class="footer-color">
     <div class="row ml-2 mr-2">
