--- a/Frontend Part/pages/src/index.html
+++ b/Frontend Part/pages/src/index.html
@@ -130,20 +130,20 @@
             <div class="row why-content">
                 <div class="col-md-4 col-lg-4 col-sm-12 text-center">
                     <div class="container ">
-                        <img height="164px"  src="/public/blog/b1.jpg" alt="">
-                        <p class="h5 text-dark my-3">Need any help or have any queries about local moving services in Christchurch</p>
+                        <img height="164px"  src="/public/blog/b1.jpg" alt=""><br>
+                        <a  href="singleBlog.html" class="h5 text-dark my-3">Need any help or have any queries about local moving services in Christchurch</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-4 col-sm-12 text-center">
                     <div class="container ">
-                        <img height="164px" src="/public/blog/b2.jpg" alt="">
-                        <p class="h5 text-dark my-3">Camry Digital Weight Machine/ Weight scale (AS PER GIVEN MODELS) .</p>
+                        <img height="164px" src="/public/blog/b2.jpg" alt=""><br>
+                        <a href="singleBlog.html" class="h5 text-dark my-3">Camry Digital Weight Machine/ Weight scale (AS PER GIVEN MODELS) .</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-4 col-sm-12 text-center">
                     <div class="container ">
-                        <img height="164px" src="/public/blog/b3.jpg" alt="">
-                        <p class="h5 text-dark my-3">A work-in-progress (WIP) is a partially finished good awaiting</p>
+                        <img height="164px" src="/public/blog/b3.jpg" alt=""><br>
+                        <a href="singleBlog.html" class="h5 text-dark my-3">A work-in-progress (WIP) is a partially finished good awaiting</a>
                     </div>
                 </div>
             </div>
