--- a/Frontend Part/pages/src/contact.html
+++ b/Frontend Part/pages/src/contact.html
@@ -10,14 +10,14 @@
     <!--row code css file-->
     <script src="https://kit.fontawesome.com/ba78558982.js" crossorigin="anonymous"></script>
     <!--index css -->
-    <link rel="stylesheet" href="/pages//css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
   </head>
   <body>
     <!-- navbar start here -->
 <section class="navbar-color">
     <nav class="navbar navbar-expand-lg navbar-light container">
         <a class="navbar-brand text-light" href="#">
-            <img height="40px" src="/public/icon/truck.gif" alt="">
+            <img height="40px" src="../public/icon/truck.gif" alt="">
             Weight Scale</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -94,7 +94,7 @@
     <div class="row ml-2 mr-2">
         <div class="col-sm-4 col-lg-4 col-sm-12">
             <div class="text-center my-5">
-                <img height="120px" src="/public/icon/truck.gif" alt="">
+                <img height="120px" src="../public/icon/truck.gif" alt="">
                 <p class="text-light">Weight Scale</p>
             </div>
         </div>
