--- a/Frontend Part/pages/src/index.html
+++ b/Frontend Part/pages/src/index.html
@@ -10,14 +10,14 @@
     <!--row code css file-->
     <script src="https://kit.fontawesome.com/ba78558982.js" crossorigin="anonymous"></script>
     <!--index css -->
-    <link rel="stylesheet" href="/pages//css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
   </head>
   <body>
     <!-- navbar start here -->
     <section class="navbar-color">
         <nav class="navbar navbar-expand-lg navbar-light container">
             <a class="navbar-brand text-light" href="#">
-                <img height="40px" src="/public/icon/truck.gif" alt="">
+                <img height="40px" src="../public/icon/truck.gif" alt="">
                 Weight Scale</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -50,13 +50,13 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/public/slider/s1.jpg" class="d-block w-100" alt="...">
+            <img src="../public/slider/s1.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/public/slider/s2.jpg" class="d-block w-100" alt="...">
+            <img src="../public/slider/s2.jpg" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="/public/slider/s3.jpg" class="d-block w-100" alt="...">
+            <img src="../public/slider/s3.jpg" class="d-block w-100" alt="...">
           </div>
         </div>
        <button class="carousel-control-prev" type="button" data-target="#carouselExampleControls" data-slide="prev">
@@ -78,19 +78,19 @@
                 <div class="row why-content">
                     <div class="col-md-4 text-center">
                         <div class="container text-light">
-                            <img height="80px"  src="/public/icon/hours.png" alt="">
+                            <img height="80px"  src="../public/icon/hours.png" alt="">
                             <p class="h4 my-4">24 / 7 Service</p>
                         </div>
                     </div>
                     <div class="col-md-4 text-center">
                         <div class="container text-light">
-                            <img height="80px" src="/public/icon/progress.png" alt="">
+                            <img height="80px" src="../public/icon/progress.png" alt="">
                             <p class="h4 my-4">Work Progress</p>
                         </div>
                     </div>
                     <div class="col-md-4 text-center">
                         <div class="container text-light">
-                            <img height="80px" src="/public/icon/trac.png" alt="">
+                            <img height="80px" src="../public/icon/trac.png" alt="">
                             <p class="h4 my-4">Work Track</p>
                         </div>
                     </div>
@@ -108,13 +108,13 @@
             <div class="row why-content">
                 <div class="col-md-4 text-center">
                     <div class="container ">
-                        <img height="80px"  src="/public//icon/icons8-weight-scale-64.png" alt="">
+                        <img height="80px"  src="../public//icon/icons8-weight-scale-64.png" alt="">
                         <p class="h5 text-dark">Weight Scale Can any product measurement</p>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="container ">
-                        <img height="80px" src="/public/icon/icons8-truck-48.png" alt="">
+                        <img height="80px" src="../public/icon/icons8-truck-48.png" alt="">
                         <p class="h5 text-dark">User Can hire Driver</p>
                     </div>
                 </div>
@@ -130,19 +130,19 @@
             <div class="row why-content">
                 <div class="col-md-4 col-lg-4 col-sm-12 text-center">
                     <div class="container ">
-                        <img height="164px"  src="/public/blog/b1.jpg" alt=""><br>
+                        <img height="164px"  src="../public/blog/b1.jpg" alt=""><br>
                         <a  href="singleBlog.html" class="h5 text-dark my-3">Need any help or have any queries about local moving services in Christchurch</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-4 col-sm-12 text-center">
                     <div class="container ">
-                        <img height="164px" src="/public/blog/b2.jpg" alt=""><br>
+                        <img height="164px" src="../public/blog/b2.jpg" alt=""><br>
                         <a href="singleBlog.html" class="h5 text-dark my-3">Camry Digital Weight Machine/ Weight scale (AS PER GIVEN MODELS) .</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-4 col-sm-12 text-center">
                     <div class="container ">
-                        <img height="164px" src="/public/blog/b3.jpg" alt=""><br>
+                        <img height="164px" src="../public/blog/b3.jpg" alt=""><br>
                         <a href="singleBlog.html" class="h5 text-dark my-3">A work-in-progress (WIP) is a partially finished good awaiting</a>
                     </div>
                 </div>
@@ -155,7 +155,7 @@
         <div class="row ml-2 mr-2">
             <div class="col-sm-4 col-lg-4 col-sm-12">
                 <div class="text-center my-5">
-                    <img height="120px" src="/public/icon/truck.gif" alt="">
+                    <img height="120px" src="../public/icon/truck.gif" alt="">
                     <p class="text-light">Weight Scale</p>
                 </div>
             </div>
