--- a/Frontend Part/pages/src/singleBlog.html
+++ b/Frontend Part/pages/src/singleBlog.html
@@ -10,14 +10,14 @@
     <!--row code css file-->
     <script src="https://kit.fontawesome.com/ba78558982.js" crossorigin="anonymous"></script>
     <!--index css -->
-    <link rel="stylesheet" href="/pages//css/index.css">
+    <link rel="stylesheet" href="../css/index.css">
   </head>
   <body>
     <!-- navbar start here -->
 <section class="navbar-color">
     <nav class="navbar navbar-expand-lg navbar-light container">
         <a class="navbar-brand text-light" href="#">
-            <img height="40px" src="/public/icon/truck.gif" alt="">
+            <img height="40px" src="../public/icon/truck.gif" alt="">
             Weight Scale</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -58,7 +58,7 @@
             <div class="col-sm-12 col-md-8 col-lg-8">
                 <div class="card my-2">
                     <div class="card-body">
-                        <img width="100%" height="400px" src="/public/blog/b1.jpg" alt="">
+                        <img width="100%" height="400px" src="../public/blog/b1.jpg" alt="">
                         <div>
                             <h3 class="my-3">Blog Title</h3> <hr>
                             <p>
@@ -73,7 +73,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-4 col-lg-4 col-sm-6">
-                                <img height="68px" width="100%" src="/public/blog/b1.jpg" alt="">
+                                <img height="68px" width="100%" src="../public/blog/b1.jpg" alt="">
                             </div>
                             <div class=" text-light col-md-8 col-lg-8 col-sm-6">
                                 <a class="text-dark" href="">Blog Title</a>
@@ -88,7 +88,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-4 col-lg-4 col-sm-6">
-                                <img height="68px" width="100%" src="/public/blog/b1.jpg" alt="">
+                                <img height="68px" width="100%" src="../public/blog/b1.jpg" alt="">
                             </div>
                             <div class=" text-light col-md-8 col-lg-8 col-sm-6">
                                 <a class="text-dark" href="">Blog Title</a>
@@ -102,7 +102,7 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-4 col-lg-4 col-sm-6">
-                                <img height="68px" width="100%" src="/public/blog/b1.jpg" alt="">
+                                <img height="68px" width="100%" src="../public/blog/b1.jpg" alt="">
                             </div>
                             <div class=" text-light col-md-8 col-lg-8 col-sm-6">
                                 <a class="text-dark" href="">Blog Title</a>
@@ -120,7 +120,7 @@
     <div class="row ml-2 mr-2">
         <div class="col-sm-4 col-lg-4 col-sm-12">
             <div class="text-center my-5">
-                <img height="120px" src="/public/icon/truck.gif" alt="">
+                <img height="120px" src="../public/icon/truck.gif" alt="">
                 <p class="text-light">Weight Scale</p>
             </div>
         </div>
